# icdcs_2024

./: .gitignore  README.md  flake.nix  pyproject.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 4lpvkv1h8gmwc50mvk8gfnlgyhys5zya-source  5a32slwfcm5al6a510iy8g2sxra6sz1g-source
notebooks/: part1.ipynb  part2.ipynb  part3.ipynb
