[tool.poetry]
name = "icdcs-2024"
version = "0.1.0"
description = "Tutorial materials for *FL x Security in Network Management* at NoF 2023"
authors = ["phdcybersec <82591009+phdcybersec@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"

tensorflow = "^2.17.0"
tensorflow-metal = "^1.1.0"
pandas = "^2.2.2"
flwr = {extras = ["datasets","simulation"], version = "^1.9.0"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.5.2"
matplotlib = "^3.9.1"
ipywidgets = "^8.1.3"


[tool.ruff]
select = ["D"]
include = ["*.py", "*.pyi", "pyproject.toml", "*.ipynb"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
